--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "crypto-js": "^4.1.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
